specific font size added

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,5 +1,5 @@
 //Body Copy
-@import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
 
 $font-size: 15px;
 
