--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,17 +19,19 @@ body {
     height: 80%;
 
     max-width: 80%;
-
+    display: grid;
+    gap: 10em;
     & .hero-section {
       display: grid;
-      grid-template-columns: 0.38fr auto;
+      grid-template-columns: 0.38fr auto auto;
       grid-auto-rows: minmax(250px, auto);
 
       & article:nth-child(1) {
+        align-self: flex-end;
         .hero-text {
           color: $very-dark-magenta;
-          font-weight: bolder;
-          font-size: 40px;
+          font-weight: $font-large;
+          font-size: 3rem;
         }
         .hero-subtext {
           color: $dark-grayish-magenta;
@@ -37,17 +39,21 @@ body {
         }
       }
       & article:nth-child(2) {
-        justify-self: center;
-        align-self: center;
+        grid-column: 3/4;
+        justify-self: flex-end;
+        align-self: flex-end;
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         gap: 1rem;
 
         & div {
           background-color: $light-grayish-magenta;
-          padding: 10px 30px;
+          padding: 15px 70px;
           border-radius: 5px;
           width: fit-content;
+          display: grid;
+          grid-template-columns: repeat(2,auto);
+          column-gap: 2rem;
         }
         & div:nth-child(2) {
           margin-left: 50px;
@@ -60,27 +66,34 @@ body {
     & .testimonials {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 200px;
-      column-gap: 10rem;
+      grid-auto-rows: 250px;
+      column-gap: 1rem;
 
       & article {
         background-color: $very-dark-magenta;
         color: white;
-      }
-      & article:nth-child(1) {
         display: grid;
         padding: 20px;
         border-radius: 10px;
+        row-gap: 1em;
 
-        div {
+        & > :first-child {
           display: grid;
           grid-template-columns: 0.5fr 2fr;
           align-items: center;
+          gap: 0.3rem;
 
           img {
             width: 50px;
             border-radius: 50%;
-            justify-self: center;
+            justify-self: flex-start;
+          }
+          & div:nth-child(1) {
+            font-weight: $font-large;
+            color: white;
+          }
+          & div:nth-child(2) {
+            color: $dark-grayish-magenta;
           }
         }
       }
