--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,13 +17,12 @@ body {
 
   & main {
     height: 80%;
-
-    max-width: 80%;
+    max-width: 65%;
     display: grid;
     gap: 10em;
     & .hero-section {
       display: grid;
-      grid-template-columns: 0.38fr auto auto;
+      grid-template-columns: 0.7fr auto auto;
       grid-auto-rows: minmax(250px, auto);
 
       & article:nth-child(1) {
@@ -52,8 +51,10 @@ body {
           border-radius: 5px;
           width: fit-content;
           display: grid;
-          grid-template-columns: repeat(2,auto);
+          grid-template-columns: repeat(2, auto);
           column-gap: 2rem;
+          color: $very-dark-magenta;
+          font-weight: $font-large;
         }
         & div:nth-child(2) {
           margin-left: 50px;
@@ -73,7 +74,7 @@ body {
         background-color: $very-dark-magenta;
         color: white;
         display: grid;
-        padding: 20px;
+        padding: 2rem;
         border-radius: 10px;
         row-gap: 1em;
 
@@ -81,7 +82,7 @@ body {
           display: grid;
           grid-template-columns: 0.5fr 2fr;
           align-items: center;
-          gap: 0.3rem;
+          gap: 1rem;
 
           img {
             width: 50px;
@@ -97,9 +98,17 @@ body {
           }
         }
       }
+      & article:nth-child(2) {
+        position: relative;
+        top: 10%;
+      }
+      & article:nth-child(3) {
+        position: relative;
+        top: 20%;
+      }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1024px) {
       & .hero-section {
         grid-template-columns: 1fr;
         place-items: flex-start;
@@ -124,19 +133,21 @@ body {
           }
         }
         & article:nth-child(2) {
+          grid-column: 1/2;
           justify-self: center;
           align-self: center;
           display: grid;
           grid-template-rows: repeat(3, 1fr);
           gap: 1rem;
+          width: 80%;
 
           & div {
-            background-color: $light-grayish-magenta;
+            padding: 0.7rem 0rem;
             display: grid;
             grid-template-rows: auto auto;
+            grid-template-columns: 1fr;
             place-items: center;
             border-radius: 5px;
-            gap: 0.5em;
             width: auto;
           }
           & div:nth-child(2) {
@@ -149,22 +160,39 @@ body {
       }
 
       & .testimonials {
-        margin-top: 2rem;
         display: grid;
         grid-template-columns: 1fr;
-        grid-auto-rows: 200px;
-        row-gap: 2rem;
+        grid-auto-rows: auto;
+        row-gap: 1rem;
+        justify-self: center;
+        margin: 0 2rem 1rem 2rem;
+        & article {
+          padding: 1rem;
+        }
+        & article:nth-child(2) {
+          position: static;
+        }
+        & article:nth-child(3) {
+          position: static;
+        }
       }
     }
   }
 }
 
-@media screen and (max-width: $mobile) {
+@media screen and (max-width: 1024px) {
   body {
     background-image: url('../images/bg-pattern-bottom-mobile.svg'),
       url('../images/bg-pattern-top-mobile.svg');
     background-repeat: no-repeat, no-repeat;
     background-position: right bottom, left top;
     background-attachment: fixed;
+    & main {
+      padding-top: 5rem;
+      height: 100%;
+      max-width: 100%;
+      display: grid;
+      gap: 2rem;
+    }
   }
 }
