--- a/scss/index.scss
+++ b/scss/index.scss
@@ -16,17 +16,19 @@ body {
   place-items: center;
 
   & main {
-    height: 80%;
-    max-width: 65%;
     display: grid;
     gap: 10em;
+    padding: 5rem;
+    max-width: 90%;
     & .hero-section {
       display: grid;
-      grid-template-columns: 0.7fr auto auto;
+      grid-template-columns: 0.5fr 1fr;
       grid-auto-rows: minmax(250px, auto);
+      
 
       & article:nth-child(1) {
         align-self: flex-end;
+        padding: 1rem;
         .hero-text {
           color: $very-dark-magenta;
           font-weight: $font-large;
@@ -38,7 +40,6 @@ body {
         }
       }
       & article:nth-child(2) {
-        grid-column: 3/4;
         justify-self: flex-end;
         align-self: flex-end;
         display: grid;
