--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,7 +1,7 @@
 //Body Copy
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
 
-$font-size: 15px;
+$font-size: 0.9375rem;
 
 // Font
 
