--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,10 @@
 @import 'config';
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
 body {
   font-size: $font-size;
   font-family: 'Spartan', sans-serif;
@@ -17,31 +22,32 @@ body {
 
   & main {
     display: grid;
-    gap: 10em;
+    gap: 5em;
     padding: 5rem;
     max-width: 90%;
     & .hero-section {
       display: grid;
       grid-template-columns: 0.5fr 1fr;
       grid-auto-rows: minmax(250px, auto);
-      
 
       & article:nth-child(1) {
-        align-self: flex-end;
-        padding: 1rem;
+        // align-self: center;
+
         .hero-text {
           color: $very-dark-magenta;
           font-weight: $font-large;
-          font-size: 3rem;
+          font-size: 2.5rem;
+          width: Max(torem(330) * 1rem, 75%);
         }
         .hero-subtext {
           color: $dark-grayish-magenta;
           margin-top: 1rem;
+          width: Min(torem(450) * 1rem, 90%);
         }
       }
       & article:nth-child(2) {
         justify-self: flex-end;
-        align-self: flex-end;
+        align-self: center;
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         gap: 1rem;
@@ -81,7 +87,7 @@ body {
 
         & > :first-child {
           display: grid;
-          grid-template-columns: 0.5fr 2fr;
+          grid-template-columns: 0.05fr 21fr;
           align-items: center;
           gap: 1rem;
 
@@ -109,7 +115,7 @@ body {
       }
     }
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: torem(1024)*1rem) {
       & .hero-section {
         grid-template-columns: 1fr;
         place-items: flex-start;
@@ -125,12 +131,10 @@ body {
 
           .hero-text {
             font-size: 30px;
-            width: 75%;
           }
           .hero-subtext {
             font-size: 14px;
             text-align: center;
-            width: 90%;
           }
         }
         & article:nth-child(2) {
@@ -189,6 +193,7 @@ body {
     background-position: right bottom, left top;
     background-attachment: fixed;
     & main {
+      padding: 0;
       padding-top: 5rem;
       height: 100%;
       max-width: 100%;
